// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search reducer should handle FETCH_MOVIES_FAILURE action 1`] = `
Object {
  "error": "Test error message",
  "isLoading": false,
  "movies": Array [],
  "moviesCount": 0,
}
`;

exports[`Search reducer should return the initial state 1`] = `
Object {
  "error": "",
  "isLoading": false,
  "movies": Array [],
  "moviesCount": 0,
}
`;

exports[`Search reducer should set isLoading after FETCH_MOVIES_REQUEST action 1`] = `
Object {
  "error": "",
  "isLoading": true,
  "movies": Array [],
  "moviesCount": 0,
}
`;

exports[`Search reducer should set movies after FETCH_MOVIES_SUCCESS action 1`] = `
Object {
  "error": "",
  "isLoading": false,
  "movies": Array [
    Object {
      "genres": Array [
        "Test genre",
        "Another test genre",
      ],
      "overview": "Test overview",
      "poster_path": "http://poster.path",
      "release_date": "2020-10-20",
      "runtime": 120,
      "title": "Test tile",
      "vote_average": 9,
    },
    Object {
      "genres": Array [
        "Test genre",
        "Another test genre",
      ],
      "overview": "Test overview",
      "poster_path": "http://poster.path",
      "release_date": "2020-10-20",
      "runtime": 120,
      "title": "Test tile",
      "vote_average": 9,
    },
    Object {
      "genres": Array [
        "Test genre",
        "Another test genre",
      ],
      "overview": "Test overview",
      "poster_path": "http://poster.path",
      "release_date": "2020-10-20",
      "runtime": 120,
      "title": "Test tile",
      "vote_average": 9,
    },
  ],
  "moviesCount": 3,
}
`;
